--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -66,6 +66,11 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
+            <a href="/links/" class={activeNav === "links" ? "active" : ""}>
+              Links
+            </a>
+          </li>
+          <li>
             <a href="/about/" class={activeNav === "about" ? "active" : ""}>
               About
             </a>
@@ -118,7 +123,7 @@ const { activeNav } = Astro.props;
 
 <style>
   #skip-to-content {
-    @apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
+    @apply bg-skin-accent text-skin-inverted absolute -top-full left-16 z-50 px-3 py-2 transition-all focus:top-4;
   }
   .nav-container {
     @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row;
@@ -133,7 +138,7 @@ const { activeNav } = Astro.props;
     @apply self-end p-2 sm:hidden;
   }
   .hamburger-menu svg {
-    @apply h-6 w-6 scale-125 fill-skin-base;
+    @apply fill-skin-base h-6 w-6 scale-125;
   }
 
   nav {
@@ -146,7 +151,7 @@ const { activeNav } = Astro.props;
     @apply col-span-2 flex items-center justify-center;
   }
   nav ul li a {
-    @apply w-full px-4 py-3 text-center font-medium hover:text-skin-accent sm:my-0 sm:px-2 sm:py-1;
+    @apply hover:text-skin-accent w-full px-4 py-3 text-center font-medium sm:my-0 sm:px-2 sm:py-1;
   }
   nav ul li:nth-last-child(2) a {
     @apply w-auto;
@@ -166,7 +171,7 @@ const { activeNav } = Astro.props;
     @apply p-1;
   }
   nav button svg {
-    @apply h-6 w-6 fill-skin-base hover:fill-skin-accent;
+    @apply fill-skin-base hover:fill-skin-accent h-6 w-6;
   }
   #theme-btn {
     @apply p-3 sm:p-1;
