--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         <span class="sr-only">RSS Feed</span>
       </a>
 
-      <p>Be Creative & Keep Learning</p>
+      <p>Be <strong>Creative</strong> & Keep <strong>Learning</strong></p>
       <p>
         Read the blog posts or check my
         <LinkButton
