test vercel analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -117,6 +117,10 @@ const socialImageURL = new URL(
     <ViewTransitions />
 
     <script is:inline src="/toggle-theme.js"></script>
+    <script>
+      import { inject } from "@vercel/analytics";
+      inject();
+    </script>
   </head>
   <body>
     <slot />
