--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import Hr from "./Hr.astro";
-import Socials from "./Socials.astro";
+import Socials from "./Socials-footer.astro";
 
 const currentYear = new Date().getFullYear();
 
