--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -57,7 +57,6 @@
     prose-figcaption:!text-skin-base prose-figcaption:opacity-70
     prose-strong:!text-skin-base
 
-
     prose-code:rounded prose-code:bg-skin-card
     prose-code:bg-opacity-75 prose-code:p-1
     prose-code:before:!content-none prose-code:after:!content-none
@@ -130,6 +129,16 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+  }
+
+  /* 修改展开按钮的文本 */
+  .remark-collapsible:before {
+    content: "展开目录";
+  }
+
+  /* 修改收起按钮的文本 */
+  .remark-collapsible[aria-expanded="true"]:before {
+    content: "收起目录";
   }
 }
 
