fix 'back to top' btn

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -93,7 +93,7 @@ const layoutProps = {
             d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
           ></path>
         </svg>
-        <span>Back to Top</span>
+        <span>Top</span>
       </button>
 
       <ShareLinks />
@@ -214,7 +214,7 @@ const layoutProps = {
   attachCopyButtons();
 
   /** Scrolls the document to the top when
-   * the "Back to Top" button is clicked. */
+   * the "Top" button is clicked. */
   function backToTop() {
     document.querySelector("#back-to-top")?.addEventListener("click", () => {
       document.body.scrollTop = 0; // For Safari
