remove sponsor link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,14 +22,14 @@ const { noMarginTop = false } = Astro.props;
       {
         SITE.lightAndDarkMode && (
           <>
-            <a href="https://zeabur.com?referralCode=synthpop123&utm_source=synthpop123&utm_campaign=oss">
+            <a href="https://zeabur.com?referralCode=synthpop123">
               <img
                 src="https://zeabur.com/deployed-on-zeabur-light.svg"
                 alt="Deployed on Zeabur"
                 id="zeabur-light"
               />
             </a>
-            <a href="https://zeabur.com?referralCode=synthpop123&utm_source=synthpop123&utm_campaign=oss">
+            <a href="https://zeabur.com?referralCode=synthpop123">
               <img
                 src="https://zeabur.com/deployed-on-zeabur-dark.svg"
                 alt="Deployed on Zeabur"
