--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,7 +18,7 @@ const { noMarginTop = false } = Astro.props;
     <Socials centered />
     <div class="copyright-wrapper">
       <span>&#169; 2021 - {currentYear}</span>
-
+      <span class="separator">&nbsp;|&nbsp;</span>
       {
         SITE.lightAndDarkMode && (
           <>
