--- a/src/layouts/TagPosts.astro
+++ b/src/layouts/TagPosts.astro
@@ -19,6 +19,14 @@ export interface Props {
 const { currentPage, totalPages, paginatedPosts, tag, tagName } = Astro.props;
 ---
 
+<!-- Google Font Proxy-->
+<link rel="preconnect" href="https://fonts.loli.net" />
+<link rel="preconnect" href="gstatic.loli.net" crossorigin />
+<link
+  href="https://fonts.loli.net/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap"
+  rel="stylesheet"
+/>
+
 <Layout title={`Tag: ${tagName} | ${SITE.title}`}>
   <Header activeNav="tags" />
   <Main
