--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -83,6 +83,14 @@ const socialImageURL = new URL(
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={socialImageURL} />
 
+    <!-- Google Font Proxy-->
+    <link rel="preconnect" href="https://fonts.loli.net" />
+    <link rel="preconnect" href="gstatic.loli.net" crossorigin />
+    <link
+      href="https://fonts.loli.net/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- LXGW WenKai Font -->
     <link
       rel="stylesheet"
