--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -130,6 +130,11 @@
     justify-content: center;
     text-align: center;
   }
+
+  .top-nav-wrap {
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+  }
 }
 
 @layer components {
