--- a/src/layouts/MiscsLayout.astro
+++ b/src/layouts/MiscsLayout.astro
@@ -16,10 +16,10 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout title={`${frontmatter.title} | ${SITE.title}`}>
-  <Header activeNav="links" />
+  <Header activeNav="miscs" />
   <Breadcrumbs />
   <main id="main-content">
-    <section id="links" class="prose prose-img:border-0 mb-28 max-w-3xl">
+    <section id="miscs" class="prose prose-img:border-0 mb-28 max-w-3xl">
       <h1 class="text-2xl tracking-wider sm:text-3xl">{frontmatter.title}</h1>
       <slot />
     </section>
