--- a/src/layouts/MiscsLayout.astro
+++ b/src/layouts/MiscsLayout.astro
@@ -23,6 +23,36 @@ const { frontmatter } = Astro.props;
       <h1 class="text-2xl tracking-wider sm:text-3xl">{frontmatter.title}</h1>
       <slot />
     </section>
+    <div id="letterboxd-embed-wrapper-tc">Loading...</div>
   </main>
-  <Footer />
 </Layout>
+<script>
+  fetch("https://lb-embed-content.bokonon.dev?username=lkw123")
+    .then(response => response.text())
+    .then(data => {
+      const element = document.getElementById("letterboxd-embed-wrapper-tc");
+      if (element) {
+        element.innerHTML = data;
+      }
+
+      const style = document.createElement("style");
+      style.innerHTML = `
+            html[data-theme="dark"] .letterboxd-embed-tc-title {
+                color: lightgray !important;
+            }
+            html[data-theme="dark"] .letterboxd-embed-tc-date {
+                color: gray !important;
+            }
+            html[data-theme="dark"] .letterboxd-embed-tc-review {
+                color: lightgray !important;
+            }
+            .letterboxd-embed-tc-review {
+                font-size: 0.9rem !important;
+            }
+        `;
+      if (element) {
+        element.appendChild(style);
+      }
+    });
+</script>
+<Footer />
