fix Letterboxd Warpped display style

--- a/src/layouts/MiscsLayout.astro
+++ b/src/layouts/MiscsLayout.astro
@@ -21,9 +21,9 @@ const { frontmatter } = Astro.props;
   <main id="main-content">
     <section id="miscs" class="prose prose-img:border-0 mb-28 max-w-3xl">
       <h1 class="text-2xl tracking-wider sm:text-3xl">{frontmatter.title}</h1>
-      <slot />
+      <slot /><br />
+      <div id="letterboxd-embed-wrapper-tc">Loading...</div>
     </section>
-    <div id="letterboxd-embed-wrapper-tc">Loading...</div>
   </main>
 </Layout>
 <script>
