--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -61,11 +61,11 @@ const layoutProps = {
     crossorigin="anonymous"
   />
 
-  <!-- Google Font Proxy-->
-  <link rel="preconnect" href="https://fonts.loli.net" />
-  <link rel="preconnect" href="gstatic.loli.net" crossorigin />
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.loli.net/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap"
     rel="stylesheet"
   />
 
@@ -123,7 +123,7 @@ const layoutProps = {
     @apply mx-auto w-full max-w-3xl px-4 pb-12;
   }
   .post-title {
-    @apply text-skin-accent text-2xl font-semibold;
+    @apply text-2xl font-semibold text-skin-accent;
   }
   /* This is fixing the dim color of katex in dark mode */
   .prose {
