--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -162,20 +162,12 @@
     @apply mb-8 mt-0 text-center !important;
   }
 
-  .footer-wrapper span {
+  .footer-wrapper span, a {
     font-size: 0.85em;
   }
 
   .footer-wrapper {
     padding-top: 0.5rem !important;
     padding-bottom: 0.5rem !important;
-  }
-
-  html[data-theme="dark"] #zeabur-light {
-    display: none;
-  }
-
-  html[data-theme="light"] #zeabur-dark {
-    display: none;
   }
 }
