--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
-import { SITE } from "@config";
 import Hr from "./Hr.astro";
 import Socials from "./Socials-footer.astro";
+import { SITE } from "@config";
 
 const currentYear = new Date().getFullYear();
 
@@ -17,49 +17,36 @@ const { noMarginTop = false } = Astro.props;
   <div class="footer-wrapper">
     <Socials centered />
     <div class="copyright-wrapper">
-      <span>&#169; 2021 - {currentYear}</span>
+      <span>&#169; 2021 - {currentYear} # {SITE.author}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
-      {
-        SITE.lightAndDarkMode && (
-          <>
-            <a href="https://zeabur.com?referralCode=synthpop123">
-              <img
-                src="https://zeabur.com/deployed-on-zeabur-light.svg"
-                alt="Deployed on Zeabur"
-                id="zeabur-light"
-              />
-            </a>
-            <a href="https://zeabur.com?referralCode=synthpop123">
-              <img
-                src="https://zeabur.com/deployed-on-zeabur-dark.svg"
-                alt="Deployed on Zeabur"
-                id="zeabur-dark"
-              />
-            </a>
-          </>
-        )
-      }
+      <a
+        class="license-link"
+        href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
+        target="_blank"
+      >
+        CC BY-NC-SA 4.0
+      </a>
     </div>
   </div>
-</footer>
 
-<style>
-  footer {
-    @apply w-full;
-  }
-  .footer-wrapper {
-    @apply flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4;
-  }
-  .link-button {
-    @apply my-1 p-2 hover:rotate-6;
-  }
-  .link-button svg {
-    @apply scale-125;
-  }
-  .copyright-wrapper {
-    @apply my-2 flex flex-col items-center whitespace-nowrap sm:flex-row;
-  }
-  .separator {
-    @apply hidden sm:inline;
-  }
-</style>
+  <style>
+    footer {
+      @apply w-full;
+    }
+    .footer-wrapper {
+      @apply flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4;
+    }
+    .link-button {
+      @apply my-1 p-2 hover:rotate-6;
+    }
+    .link-button svg {
+      @apply scale-125;
+    }
+    .copyright-wrapper {
+      @apply my-2 flex flex-col items-center whitespace-nowrap sm:flex-row;
+    }
+    .separator {
+      @apply hidden sm:inline;
+    }
+  </style>
+</footer>
