--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
+import { SITE } from "@config";
 import Hr from "./Hr.astro";
 import Socials from "./Socials-footer.astro";
-import { SITE } from "@config";
 
 const currentYear = new Date().getFullYear();
 
@@ -17,7 +17,7 @@ const { noMarginTop = false } = Astro.props;
   <div class="footer-wrapper">
     <Socials centered />
     <div class="copyright-wrapper">
-      <span>&#169; 2021 - {currentYear} # {SITE.author}</span>
+      <span>&#169; 2021 - {currentYear} {SITE.author}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
       <a
         class="license-link"
@@ -28,25 +28,25 @@ const { noMarginTop = false } = Astro.props;
       </a>
     </div>
   </div>
-
-  <style>
-    footer {
-      @apply w-full;
-    }
-    .footer-wrapper {
-      @apply flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4;
-    }
-    .link-button {
-      @apply my-1 p-2 hover:rotate-6;
-    }
-    .link-button svg {
-      @apply scale-125;
-    }
-    .copyright-wrapper {
-      @apply my-2 flex flex-col items-center whitespace-nowrap sm:flex-row;
-    }
-    .separator {
-      @apply hidden sm:inline;
-    }
-  </style>
 </footer>
+
+<style>
+  footer {
+    @apply w-full;
+  }
+  .footer-wrapper {
+    @apply flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4;
+  }
+  .link-button {
+    @apply my-1 p-2 hover:rotate-6;
+  }
+  .link-button svg {
+    @apply scale-125;
+  }
+  .copyright-wrapper {
+    @apply my-2 flex flex-col items-center whitespace-nowrap sm:flex-row;
+  }
+  .separator {
+    @apply hidden sm:inline;
+  }
+</style>
