--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
 
 export interface Props {
-  activeNav?: "posts" | "tags" | "miscs" | "about" | "search";
+  activeNav?: "posts" | "tags" | "memos" | "miscs" | "about" | "search";
 }
 
 const { activeNav } = Astro.props;
@@ -66,6 +66,11 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
+            <a href="/memos/" class={activeNav === "memos" ? "active" : ""}>
+              Memos
+            </a>
+          </li>
+          <li>
             <a href="/miscs/" class={activeNav === "miscs" ? "active" : ""}>
               Miscs
             </a>
@@ -123,7 +128,7 @@ const { activeNav } = Astro.props;
 
 <style>
   #skip-to-content {
-    @apply bg-skin-accent text-skin-inverted absolute -top-full left-16 z-50 px-3 py-2 transition-all focus:top-4;
+    @apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
   }
   .nav-container {
     @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row;
@@ -138,7 +143,7 @@ const { activeNav } = Astro.props;
     @apply self-end p-2 sm:hidden;
   }
   .hamburger-menu svg {
-    @apply fill-skin-base h-6 w-6 scale-125;
+    @apply h-6 w-6 scale-125 fill-skin-base;
   }
 
   nav {
@@ -151,7 +156,7 @@ const { activeNav } = Astro.props;
     @apply col-span-2 flex items-center justify-center;
   }
   nav ul li a {
-    @apply hover:text-skin-accent w-full px-4 py-3 text-center font-medium sm:my-0 sm:px-2 sm:py-1;
+    @apply w-full px-4 py-3 text-center font-medium hover:text-skin-accent sm:my-0 sm:px-2 sm:py-1;
   }
   nav ul li:nth-last-child(2) a {
     @apply w-auto;
@@ -171,7 +176,7 @@ const { activeNav } = Astro.props;
     @apply p-1;
   }
   nav button svg {
-    @apply fill-skin-base hover:fill-skin-accent h-6 w-6;
+    @apply h-6 w-6 fill-skin-base hover:fill-skin-accent;
   }
   #theme-btn {
     @apply p-3 sm:p-1;
