--- a/src/pages/memos.astro
+++ b/src/pages/memos.astro
@@ -27,6 +27,7 @@ const items = feed.items.map(item => ({
   <main id="main-content">
     <section id="memos" class="prose mb-28 max-w-3xl prose-img:border-0">
       <h1 class="text-2xl tracking-wider sm:text-3xl">Memos</h1>
+      <p>Working on it...</p>
     </section>
   </main>
 </Layout>
