--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from "astro:assets";
+import localCCLogo from "../assets/images/cc-by-nc-sa.svg";
 import { SITE } from "@config";
 import Hr from "./Hr.astro";
 import Socials from "./Socials-footer.astro";
@@ -24,7 +26,7 @@ const { noMarginTop = false } = Astro.props;
         href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
         target="_blank"
       >
-        CC BY-NC-SA 4.0
+        <Image src={localCCLogo} alt="CC BY-NC-SA Logo" />
       </a>
     </div>
   </div>
