--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,8 @@
 import { LOGO_IMAGE, SITE } from "@config";
 import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
+import { Image } from "astro:assets";
+import localLogoImage from "../assets/images/logo.webp";
 
 export interface Props {
   activeNav?: "posts" | "tags" | "memos" | "miscs" | "about" | "search";
@@ -17,8 +19,8 @@ const { activeNav } = Astro.props;
       <a href="/" class="logo whitespace-nowrap">
         {
           LOGO_IMAGE.enable ? (
-            <img
-              src={`/assets/${LOGO_IMAGE.svg ? "logo.svg" : "logo.webp"}`}
+            <Image
+              src={localLogoImage}
               alt={SITE.title}
               width={LOGO_IMAGE.width}
               height={LOGO_IMAGE.height}
