feat: Update friend image in miscs page

--- a/src/pages/miscs.astro
+++ b/src/pages/miscs.astro
@@ -11,8 +11,7 @@ import { Image } from "astro:assets";
 const friends = [
   {
     name: "lkhll",
-    image:
-      "https://blog.kylelv.com/wp-content/uploads/2020/03/225746FEEECD80CD9542FB24A34F0841.jpg",
+    image: "https://r2.lkwplus.com/assets/2024/komqaq.webp",
     url: "https://kylelv.com/",
     bio: "komqaq",
   },
