fix: Fix a typo in miscs page

--- a/src/pages/miscs.astro
+++ b/src/pages/miscs.astro
@@ -28,13 +28,13 @@ const friends = [
   <Header activeNav="miscs" />
   <Breadcrumbs />
   <main id="main-content">
-    <section id="miscs" class="prose prose-img:border-0 mb-28 max-w-3xl">
+    <section id="miscs" class="prose mb-28 max-w-3xl prose-img:border-0">
       <h1 class="text-2xl tracking-wider sm:text-3xl">Miscs</h1>
       <Image src={localMiscImage} alt="Misc image" />
       <h2>Friends</h2>
       <section
         id="friends"
-        class="prose prose-img:border-0 max-w-3xl friend-cards-container"
+        class="friend-cards-container prose max-w-3xl prose-img:border-0"
       >
         {
           friends.map(friend => (
@@ -55,7 +55,7 @@ const friends = [
         something new.
       </p>
       <p>
-        我不明了我的全部天职，根本想不到应该怎么样和将要成为什么。在我的生命的每一时刻我确实知道的是，我应该做什么∶我应该发展我的智慧，学得知识，以便扩展我的职责的范围。我处于极为明智和至善的世界之中，这个世界毫无误差地贯彻执行它的计划，我安于这种信念而享有幸福。
+        我不明了我的全部天职，根本想不到应该怎么样和将要成为什么。在我的生命的每一时刻我确实知道的是，我应该做什么：我应该发展我的智慧，学得知识，以便扩展我的职责的范围。我处于极为明智和至善的世界之中，这个世界毫无误差地贯彻执行它的计划，我安于这种信念而享有幸福。
       </p>
       <h2>WakaTime Coding Stats</h2>
       <figure>
