--- a/src/pages/misc.astro
+++ b/src/pages/misc.astro
@@ -11,7 +11,7 @@ import { Image } from "astro:assets";
 const friends = [
   {
     name: "lkhll",
-    image: "https://r2.lkwplus.com/assets/2024/komqaq.webp",
+    image: "https://img.lkwplus.com/komqaq.webp",
     url: "https://kylelv.com/",
     bio: "komqaq",
   },
