feat: Add Umami support

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -125,6 +125,14 @@ const socialImageURL = new URL(
       )
     }
 
+    // Umami Configuration
+    <script
+      defer
+      src="https://public.lkwplus.com/potatohead"
+      data-website-id="64b21dc8-e9bb-41a6-b2a3-06150cf9d3ba"
+      data-host-url="https://umami.lkwplus.com"
+    ></script>
+
     <ViewTransitions />
 
     <script is:inline src="/toggle-theme.js"></script>
