fix: Fix a stupid bug during Umami import

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -125,7 +125,7 @@ const socialImageURL = new URL(
       )
     }
 
-    // Umami Configuration
+    <!-- Umami Configuration -->
     <script
       defer
       src="https://public.lkwplus.com/potatohead"
