--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -92,13 +92,13 @@ const socialImageURL = new URL(
       config={[
         {
           src: [],
-          name: "IBM Plex Mono",
+          name: "Sono",
           googleFontsURL:
-            "https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap",
+            "https://fonts.googleapis.com/css2?family=Sono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap",
           preload: false,
           display: "swap",
           fallback: "monospace",
-          cssVariable: "font-ibm",
+          cssVariable: "font-sono",
         },
       ]}
     />
