feat: Update KaTeX configuration to allow non-standard characters

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -49,7 +49,7 @@ const layoutProps = {
 <Layout {...layoutProps}>
   <Header />
 
-  <!-- Katex -->
+  <!-- KaTeX -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css"
