feat: Update Layout.astro to define domain in umami analytics script

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -131,7 +131,8 @@ const socialImageURL = new URL(
       defer
       src="https://public.lkwplus.com/potatohead"
       data-website-id="64b21dc8-e9bb-41a6-b2a3-06150cf9d3ba"
-      data-host-url="https://umami.lkwplus.com"></script>
+      data-host-url="https://umami.lkwplus.com"
+      data-domains="blog.lkwplus.com"></script>
 
     <ViewTransitions />
 
