--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,7 @@ export interface Props {
   pubDatetime?: Date;
   modDatetime?: Date | null;
   scrollSmooth?: boolean;
+  katex?: boolean;
 }
 
 const {
@@ -26,6 +27,7 @@ const {
   pubDatetime,
   modDatetime,
   scrollSmooth = false,
+  katex = false,
 } = Astro.props;
 
 const socialImageURL = new URL(
@@ -135,6 +137,18 @@ const socialImageURL = new URL(
       data-domains="blog.lkwplus.com"></script>
 
     <ViewTransitions />
+
+    <!-- KaTeX -->
+    {
+      katex && (
+        <link
+          rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
+          integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+"
+          crossorigin="anonymous"
+        />
+      )
+    }
 
     <script is:inline src="/toggle-theme.js"></script>
   </head>
