chore: Fomatting codes with prettier

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,11 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           </svg>
           <span class="sr-only">RSS Feed</span>
         </a>
-        <h2><span class="no-accent">Be</span> Creative <span class="no-accent">& Keep</span> Learning</h2>
+        <h2>
+          <span class="no-accent">Be</span> Creative <span class="no-accent"
+            >& Keep</span
+          > Learning
+        </h2>
       </div>
       {
         // only display if at least one social link is enabled
