feat: Update LinkButton component to support opening links in a new tab

--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -5,6 +5,7 @@ export interface Props {
   ariaLabel?: string;
   title?: string;
   disabled?: boolean;
+  blank?: boolean;
 }
 
 const {
@@ -13,6 +14,7 @@ const {
   ariaLabel,
   title,
   disabled = false,
+  blank = false,
 } = Astro.props;
 ---
 
@@ -20,7 +22,6 @@ const {
   disabled ? (
     <span
       class:list={["group inline-block", className]}
-      aria-label={ariaLabel}
       title={title}
       aria-disabled={disabled}
     >
@@ -32,6 +33,7 @@ const {
       class:list={["group inline-block hover:text-skin-accent", className]}
       aria-label={ariaLabel}
       title={title}
+      target={blank ? "_blank" : "_self"}
     >
       <slot />
     </a>
