--- a/src/components/ShareLinks.astro
+++ b/src/components/ShareLinks.astro
@@ -47,6 +47,7 @@ const shareLinks = [
           href={`${social.href + URL}`}
           className="link-button"
           title={social.linkTitle}
+          blank = {true}
         >
           <Fragment set:html={socialIcons[social.name]} />
           <span class="sr-only">{social.linkTitle}</span>
