chore: Prettier all files code style

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -156,7 +156,9 @@ const layoutProps = {
   /** Attaches links to headings in the document,
    *  allowing sharing of sections easily */
   function addHeadingLinks() {
-    const headings = Array.from(document.querySelectorAll("h2, h3, h4, h5, h6"));
+    const headings = Array.from(
+      document.querySelectorAll("h2, h3, h4, h5, h6")
+    );
     for (const heading of headings) {
       heading.classList.add("group");
       const link = document.createElement("a");
