fix: Replace unavailable friend icon URL

--- a/src/pages/misc.astro
+++ b/src/pages/misc.astro
@@ -17,7 +17,7 @@ const friends = [
   },
   {
     name: "cfandora",
-    image: "https://pic.cfandora.com/avatar/dora.avif",
+    image: "https://img.lkwplus.com/dora.avif",
     url: "https://blog.cfandora.com/",
     bio: "Try to Find",
   },
